<resources>
    <string name="app_name">Food for the Hungry</string>
    <string name="home">Home</string>
    <string name="sponsors">Sponsors</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_child_name">Enter child name</string>
    <string name="enter_sponsor_name">Enter name of the sponsor</string>
    <string name="add_new_child">Add new child</string>
    <string name="name_of_the_child">Name of the child</string>
    <string name="location_of_the_child">Where does the child live?</string>
    <string name="when_was_the_child_born">When was the child born?</string>
    <string name="submit">Submit</string>
    <string name="name_of_the_sponsor">Name of the sponsor</string>
    <string name="location_of_the_sponsor">Where does the sponsor live?</string>
    <string name="contact_of_the_sponsor">Enter Sponsors\' Phone Number</string>
    <string name="passport_number">Enter Sponsors\' passport number</string>
    <string name="birth_cert_number">Enter Birth Certificate number</string>
    <string name="add_new_sponsor">Add new sponsor</string>
    <string name="deleteChild">Delete Child</string>
    <string name="child_profile">Child Profile</string>
    <string name="update">Update</string>
    <string name="edit_child">Edit child</string>
    <string name="sign_in">"Sign In or Sign Up "</string>
    <string name="you_can_use_any_of_your_logged_in_google_accounts_on_this_device_to_sign_in_or_signup_to_the_application">You can use any of your logged in google accounts on this device to sign in or signup to the application</string>
    <string name="edit_sponsor">Edit Sponsor</string>
    <string name="deleteSponsor">Delete Sponsor</string>
    <string name="sponsor_profile">Sponsor Profile</string>
    <string name="asign_Sponsor">Asign sponsor</string>
    <string name="view_transactions">View Contributions</string>
</resources>