<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.view.child.ChildProfileActivity">
    <data>
        <variable
            name="viewModel"
            type="com.samgithiaka.apps.foodforthehungry.ui.viewmodel.ChildDetailsViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/iwToolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iwBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|bottom"
                android:layout_marginStart="10dp"
                android:layout_weight="0.2"
                app:srcCompat="@drawable/ic_go_back_icon" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="bottom"
                android:hint="@string/child_profile"
                android:textColor="@color/color_primary"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/profile_image"
                            android:layout_width="111dp"
                            android:layout_height="111dp"
                            android:src="@drawable/ic_user_profile" />

                        <TextView
                            android:id="@+id/txtUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:gravity="center"
                            android:text="@={viewModel.inputFullName}"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="18dp"
                            android:background="@color/inactive" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="Birth Certificate No."
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@={viewModel.inputBirthCertNo}"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="Date of Birth"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@={viewModel.inputDateOfBirth}"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="Location"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@={viewModel.inputLocation}"
                            android:textColor="@color/black"
                            android:textSize="14sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginEnd="32dp"
                        android:orientation="horizontal">
                        <Button
                            android:id="@+id/btnViewTransactions"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/view_transactions"
                            android:textAllCaps="false"
                            android:layout_marginEnd="8dp"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:background="@color/white"
                            android:layout_marginBottom="20dp"/>
                        <Button
                            android:id="@+id/btnAsignSponsor"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/asign_Sponsor"
                            android:textAllCaps="false"
                            android:onClick="@{()->viewModel.updateChild()}"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:background="@color/color_primary"
                            android:layout_marginBottom="20dp"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/edit_child"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:background="@color/color_primary"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"/>
            <Button
                android:id="@+id/btnDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:background="@color/white"
                android:layout_marginEnd="32dp"
                android:text="@string/deleteChild"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:onClick="@{()->viewModel.deleteChild()}"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="50dp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>